kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cryptopix
  labels:
    app: cryptopix
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: cryptopix
